2008-08-10 Raphael Neider <rneider AT web.de>

	* configure.in,
	* Makefile.common.in: export PACKAGE for $docdir,
	  fixes #1957036, avoid some "underquoted definition" warnings
	* configure: regenerated

2008-08-10 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/**: build pic16 library using autotools for
	  improved dependency tracking

	* device/lib/Makefile.in,
	* src/pic16/main.c,
	* support/scripts/sdcc.nsi: adapt to changes in filenames (s/.lib/.a/)

2008-08-10 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (ReuseReg): do not overlay the registers used for
	  local variables if --nooverlay is given, workaround for #2023121

2008-08-08 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c (genAddLit): fix structure access (#1888004)

2008-08-08 Raphael Neider <rneider AT web.de>

	* src/pic/pcoderegs.c,
	* src/pic/pcode.c,
	* src/pic16/pcode.c: replace own SAFE_snprintf with common SNPRINTF

2008-08-07 Borut Razem <borut.razem AT siol.net>

	* src/SDCCval.c, src/SDCCmain.c, src/SDCC.lex,
	  device/lib/pic/Makefile.rules, device/lib/ds390/Makefile.in,
	  device/lib/ds400/Makefile.in, device/lib/hc08/Makefile.in,
	  support/cpp/libcpp/lex.c,  doc/sdccman.lyx:
	  applied modified patch 2038174: Add support for binary constants v2
	  thanks Mauro Giachero
	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.3

2008-08-04 Raphael Neider <rneider AT web.de>

	* doc/sdccman.lyx,
	* src/pic16/device.h,
	* src/pic16/glue.c,
	* src/pic16/main.c: enable --optimize-goto by default

	* device/lib/pic16/Makefile.common.in: suppress removed option

	* src/pic16/gen.c,
	* src/pic16/genutils.c: avoid too long relative branches (#2031890)

2008-07-30 Borut Razem <borut.razem AT siol.net>

	* src/pic16/device.c, src/pic16/glue.c, src/pic16/pcode.c:
	  applied patch 22032433: PIC16: fix constant strings,
	  thanks Mauro Giachero

2008-07-29 Borut Razem <borut.razem AT siol.net>

	* src/pic16/gen.c: applied patches: